# grabby

./: .gitignore  .goreleaser.yaml  DESIGN.md  Makefile  grabby-mac-ui.html  grabby-mac-ui.html.artifact.json  grabby-mac.html  package-lock.json  project_structure.md  pyproject.toml  readme.md  start.py  start.sh  upgrade_plan.md
.github/workflows/: release.yml
apis/: extra.yml  opencollection.yml  register.yml
chrome-extension/: PRIVACY_POLICY-zh.md  PRIVACY_POLICY.md  background.js  build.js  manifest.json  package-lock.json  package.json
chrome-extension/lib/: defuddle.bundle.js  extractor.js  websocket.js
chrome-extension/options/: options.css  options.html  options.js
chrome-extension/popup/: popup.html  popup.js
docs/: README.md  api-reference.md  architecture.md  configuration.md  installation.md  introduction.md  requirements.md  usage.md
go-cli/: go.mod  main.go
go-cli/cmd/: browsers.go  extract.go  (+5 more)
go-server/: .env.example  ai_daily.go  ai_engine.go  ai_handlers.go  ai_selector.go  ai_test.go  browser_registry.go  browser_registry_test.go  classifier.go  classifier_test.go  config.go  db.go  db_ai_test.go  db_test.go  go.mod  go.sum  lmstudio.go  logger.go  main.go  scheduler.go  scrapers.go  scratch_test.go  task_queue.go  types.go  websocket_manager.go  websocket_manager_test.go
python-cli/: cli.py
python-server/: .env.example  browser_registry.py  config.py  logger.py  main.py  test_browser_registry.py  websocket_manager.py
scripts/: install.py  install.sh
site/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
(+79 files in other folders)
